--- a/index.html
+++ b/index.html
@@ -3,85 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>odin-sign-up-form</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container" id="sidebar">
-        <div class="card-container" id="logo-text">
+        <div class="card-container">
             <img src="halie-west-25xggax4bSA-unsplash.jpg" alt="Backsplash of palm tree fronds" class="card-image">
-            <div class="card-body">Odin</div>
+            <div class="card-heading">
+                <img src="odin-lined.png" alt="odin-logo" id="odin-logo">
+                <div id="logo-text">Odin</div>
+            </div>
         </div>
     </div>
     <div class="container" id="sign-up-form">
         <div class="section" id="header">
-            <h4>This is not a real online service...</h4>
-            <h4>You know what to do</h4>
+            <h3>This is not a real online service...</h3>
+            <h3>You know what to do</h3>
         </div>
         <div class="section" id="input-form">
             <h3>Let's do this!</h3>
             <form action="/somepath.com" method="post" id="user-info">
-                <div>
-                    <label for="first-name">
-                        First Name: 
-                        <strong><span aria-required="required">*</span></strong>
-                        <input 
-                            type="text" 
-                            id="first-name" 
-                            name="user-first-name" 
-                            required>
-                    </label>
+                <div class="row" id="name">
+                    <div>
+                        <label for="first-name">
+                            First Name: 
+                            <input 
+                                type="text" 
+                                id="first-name" 
+                                name="user-first-name" 
+                                required>
+                        </label>
+                    </div>
+                    <div>
+                        <label for="last-name">
+                            Last Name
+                            <input 
+                                type="text" 
+                                id="last-name" 
+                                name="user-last-name" 
+                                required>
+                        </label>
+                    </div>
                 </div>
-                <div>
-                    <label for="last-name">
-                        First Name
-                        <strong><span aria-required="required">*</span></strong>
-                        <input 
-                            type="text" 
-                            id="last-name" 
-                            name="user-last-name" 
-                            required>
-                    </label>
+                <div class="row" id="contact">
+                    <div>
+                        <label for="mail">
+                            Email
+                            <input 
+                                type="email"
+                                id="mail"
+                                name="user-email">
+                        </label>
+                    </div>
+                    <div>
+                        <label for="phone">
+                            Phone Number
+                            <input 
+                                type="tel"
+                                id="phone"
+                                name="phone-number">
+                        </label>
+                    </div>
                 </div>
-                <div>
-                    <label for="mail">
-                        Email
-                        <input 
-                            type="email"
-                            id="mail"
-                            name="user-email">
-                    </label>
-                </div>
-                <div>
-                    <label for="phone">
-                        Phone Number
-                        <input 
-                            type="tel"
-                            id="phone"
-                            name="phone-number">
-                    </label>
-                </div>
-                <div>
-                    <label for="pwd">
-                        Password
-                        <strong><span aria-required="required">*</span></strong>
-                        <input 
-                            type="password" 
-                            id="pwd" 
-                            name="user-pwd" 
-                            required>
-                    </label>
-                </div>
-                <div>
-                    <label for="pwd-confirm">
-                        Confirm Password
-                        <strong><span aria-required="required">*</span></strong>
-                        <input 
-                            type="password" 
-                            id="pwd-confirm" 
-                            name="user-pwd" 
-                            required>
-                    </label>
+                <div class="row" id="password">
+                    <div>
+                        <label for="pwd">
+                            Password
+                            <input 
+                                type="password" 
+                                id="pwd" 
+                                name="user-pwd" 
+                                required>
+                        </label>
+                    </div>
+                    <div>
+                        <label for="pwd-confirm">
+                            Confirm Password
+                            <input 
+                                type="password" 
+                                id="pwd-confirm" 
+                                name="user-pwd" 
+                                required>
+                        </label>
+                    </div>
                 </div>
             </form>
         </div>
